# EVS_codec

./: CMakeLists.txt  readme.txt
lib_com/: ACcontextMapping.c  ari.c  ari_hm.c  arith_coder.c  basop_com_lpc.c  basop_lsf_tools.c  basop_mpy.c  basop_mpy.h  basop_proto_func.h  basop_settings.h  basop_tcx_utils.c  basop_util.c  basop_util.h  bastypes.h  bitalloc.c  bitallocsum.c  bits_alloc.c  bitstream.c  calc_st_com.c  cb_shape.c  cldfb.c  cng_exc.c  cnst.h  codec_tcx_common.c  control.h  core_com_config.c  deemph.c  delay_comp.c  disclaimer.c  dlpc_bfi.c  edct.c  enhancer.c  enr_1_az.c  env_adj.c  env_stab.c  env_stab_trans.c  est_tilt.c  fd_cng_com.c  fft.c  fft_cldfb.c  (+90 more)
lib_dec/: ACcontextMapping_dec.c  EvsRXlib.c  EvsRXlib.h  FEC.c  FEC_HQ_core.c  FEC_HQ_phase_ecu.c  FEC_adapt_codebook.c  FEC_clas_estim.c  FEC_lsf_estim.c  FEC_pitch_estim.c  FEC_scale_syn.c  LD_music_post_filter.c  TonalComponentDetection.c  acelp_core_dec.c  acelp_core_switch_dec.c  amr_wb_dec.c  ari_dec.c  ari_hm_dec.c  arith_coder_dec.c  avq_dec.c  bass_psfilter.c  cng_dec.c  core_dec_init.c  core_dec_reconf.c  core_dec_switch.c  core_switching_dec.c  d_gain2p.c  dec2t32.c  dec4t64.c  dec_LPD.c  dec_ace.c  dec_acelp.c  dec_acelp_tcx_main.c  dec_amr_wb.c  dec_gen_voic.c  dec_higher_acelp.c  dec_nelp.c  dec_pit_exc.c  dec_post.c  dec_ppp.c  (+88 more)
lib_enc/: ACcontextMapping_enc.c  FEC_enc.c  SNR_calc.c  acelp_core_enc.c  acelp_core_switch_enc.c  acelp_enc_util.c  amr_wb_enc.c  analy_lp.c  analy_sp.c  ari_enc.c  ari_hm_enc.c  arith_coder_enc.c  avq_cod.c  bass_psfilter_enc.c  bw_detect.c  cng_enc.c  cod2t32.c  cod4t64.c  cod_ace.c  cod_tcx.c  cod_uv.c  comvad_decision.c  cor_shif.c  dtx.c  (+118 more)
